[package]
name = "db_api"
version = "0.1.1"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12.4"
prost-build = "0.12.4"
tonic-build = "0.11.0"
tonic-reflection = "0.11.0"
chrono = "0.4.38"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
humantime = "2.1.0"
surrealdb = "1.4.2"
log = "0.4.21"

[build-dependencies]
tonic-build = "0.11.0"
